--- a/app/src/main/res/drawable/btn5.xml
+++ b/app/src/main/res/drawable/btn5.xml
@@ -4,12 +4,12 @@
         <shape>
             <stroke
                 android:width="2dp"
-                android:color="#19CDCD"/>
-            <corners android:radius="15dp"/>
+                android:color="#CEE5D5"/>
+            <corners android:radius="50dp"/>
             <gradient
                 android:angle="0"
-                android:startColor="#FFFFFF"
-                android:endColor="#FFFFFF"
+                android:startColor="#FCF695"
+                android:endColor="#FCF695"
                 android:type="radial"
                 android:gradientRadius="70%"/>
         </shape>
