--- a/app/src/main/res/drawable/inputbox.xml
+++ b/app/src/main/res/drawable/inputbox.xml
@@ -2,18 +2,22 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <item
-        android:width="20dp"
-        android:height="20dp">
+    <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-            <stroke
-                android:width="2dp"
-                android:color="#8A8A8A" />
-            <corners android:radius="6dp"/>
-            <solid
-                android:color="#FFFFFF" />
-        </shape>
 
+            <stroke
+
+                android:width="1dp"
+
+                android:color="#E9E9E9" />
+
+            <corners android:radius="4dp"/>
+            <padding android:bottom="9dp" android:left="20dp" android:right="20dp" android:top="9dp"/>
+            <solid
+
+                android:color="#FFFFFF" />
+
+        </shape>
     </item>
 
 
