--- a/app/src/main/res/layout/fragment_enroll_recipe.xml
+++ b/app/src/main/res/layout/fragment_enroll_recipe.xml
@@ -147,7 +147,6 @@
 
 
     </LinearLayout>
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -155,23 +154,16 @@
         android:orientation="horizontal">
 
 
-
-        <Button
+        <ImageButton
             android:id="@+id/toList"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/list"
-            android:background="@drawable/btn2"
+            android:src="@drawable/list"
             android:enabled="true"
             android:onClick="onClick"
+            android:background="@drawable/btn2"
             android:layout_weight="1"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:fontFamily="@font/font3"
-            android:textSize="10dp"
-            android:text="리스트"
-            android:textColor="#141414"
-
+            android:padding="5dp"
             />
 
 
@@ -179,59 +171,50 @@
 
 
 
-        <Button
-            android:id="@+id/toMyPg"
+        <ImageButton
+            android:id="@+id/toM"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/user"
+            android:src="@drawable/user"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:fontFamily="@font/font3"
-            android:textSize="10dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="마이페이지"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
 
-
-
-        <Button
-            android:id="@+id/toUd"
+        <ImageButton
+            android:id="@+id/toH"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/home"
+            android:src="@drawable/home"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="홈"
-            android:fontFamily="@font/font3"
-            android:textSize="10dp"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
 
 
-
-
-
-        <Button
-            android:id="@+id/toErl"
+        <ImageButton
+            android:id="@+id/toT"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:drawableTop="@drawable/erl"
+            android:src="@drawable/prefer"
             android:background="@drawable/btn2"
             android:enabled="true"
-            android:onClick="onClick"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:text="레시피등록"
-            android:fontFamily="@font/font3"
-            android:textSize="10dp"
             android:layout_weight="1"
-            android:textColor="#141414" />
+            android:padding="5dp"/>
+
+
+
+
+
+        <ImageButton
+            android:id="@+id/toE"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/erl"
+            android:background="@color/white"
+            android:enabled="true"
+            android:layout_weight="1"
+            android:padding="5dp"/>
 
 
 
