--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -103,7 +103,6 @@
                 android:background="@drawable/btn2"
                 android:enabled="true"
                 android:onClick="onClick"
-
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
                 android:fontFamily="@font/font3"
@@ -130,7 +129,23 @@
                 android:layout_weight="1"/>
 
 
-            <Button
+        <Button
+            android:id="@+id/toH"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@drawable/btn2"
+            android:drawableTop="@drawable/home"
+            android:enabled="true"
+            android:fontFamily="@font/font3"
+            android:onClick="onClick"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:text="홈"
+            android:textColor="#03A9F4"
+            android:textSize="15dp" />
+
+        <Button
                 android:id="@+id/toUd"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
