--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -1,13 +1,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:orientation="vertical" >
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
 
 
@@ -50,17 +52,44 @@
 
         </LinearLayout>
 
-    </LinearLayout>
-    <LinearLayout
+        </LinearLayout>
+    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
+     <LinearLayout
+         android:layout_marginTop="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="15dp">
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_weight="1">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:text="ID"
+                android:textSize="15dp"
+                android:textColor="#000000"
+                android:fontFamily="@font/font"/>
 
 
             <EditText
@@ -79,12 +108,21 @@
                 android:id="@+id/check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
                 android:inputType="text"
-                android:background="@drawable/btn5"
-                android:text="중복확인"
-                android:layout_gravity="center"/>
+                android:layout_gravity="left"
+                android:background="@drawable/btn1"
+                android:text="중복확인" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1">
+
+            </LinearLayout>
 
         </LinearLayout>
 
@@ -98,7 +136,33 @@
 
 
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1">
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="비밀번호"
+                    android:textSize="15dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/font"/>
+
+
         <EditText
+            android:layout_marginTop="8dp"
             android:id="@+id/pw1"
             android:layout_width="wrap_content"
             android:background="@drawable/inputbox"
@@ -109,146 +173,132 @@
             android:text="비밀번호 입력"
             android:layout_gravity="center"/>
 
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="비밀번호 확인"
+                    android:textSize="15dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/font"/>
+
         <EditText
-            android:layout_marginTop="7dp"
+            android:layout_marginTop="8dp"
             android:layout_marginBottom="15dp"
             android:textColorHint="#032149"
             android:id="@+id/pw2"
-            android:layout_width="wrap_content"                android:background="@drawable/inputbox"
-
+            android:layout_width="wrap_content"
+            android:background="@drawable/inputbox"
             android:layout_height="wrap_content"
             android:ems="15"
             android:inputType="text"
             android:text="비밀번호 재확인"
             android:layout_gravity="center"/>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="비밀번호 분실시 답변"
+                    android:textSize="15dp"
+                    android:textColor="#000000"
+                    android:fontFamily="@font/font"/>
 
+                <Spinner
+                    android:id="@+id/spinner1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+
+                <EditText
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="15dp"
+                    android:textColorHint="#032149"
+                    android:id="@+id/rst"
+                    android:layout_width="wrap_content"
+                    android:background="@drawable/inputbox"
+                    android:layout_height="wrap_content"
+                    android:ems="15"
+                    android:inputType="text"
+                    android:text="답변 입력"
+                    android:layout_gravity="center"/>
+
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_weight="1">
+
+            </LinearLayout>
 
         </LinearLayout>
 
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:gravity="center"
+             android:orientation="vertical"
+             android:layout_marginTop="14dp">
+
+
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal"
+                 android:layout_marginTop="10dp"
+                 android:layout_weight="1">
+
+             </LinearLayout>
+
+             <LinearLayout
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content"
+                 android:layout_marginTop="15dp"
+                 android:orientation="vertical">
+
+                 <Button
+                     android:id="@+id/mov"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:inputType="text"
+                     android:layout_gravity="left"
+                     android:background="@drawable/btn1"
+                     android:text="더 나은 추천을 위해 선호도를 입력해 주세요!!"
+                     android:textColor="#567ACE"/>
+
+
+                 <Button
+                     android:id="@+id/fin"
+                     android:layout_width="wrap_content"
+                     android:layout_height="wrap_content"
+                     android:ems="10"
+                     android:inputType="text"
+                     android:layout_gravity="center"
+                     android:background="@drawable/btn5"
+                     android:layout_marginTop="10dp"
+                     android:text="가입 하기" />
+
+
+             </LinearLayout>
+
+
+             <LinearLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:orientation="horizontal"
+                 android:layout_marginTop="15dp"
+                 android:layout_weight="1">
+
+             </LinearLayout>
+
+         </LinearLayout>
 
     </LinearLayout>
-
-    <View android:layout_width="match_parent" android:layout_height="1dp" android:background="@android:color/darker_gray"/>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAlignment="center"
-            android:layout_gravity="center"
-            android:fontFamily="@font/font3"
-            android:text="더 나은 추천을 위해 입력해주세요!"
-            android:textColor="#000000"
-            android:textSize="23dp" />
-
-        <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:text="1. 좋아하는 음식 종류"
-            android:fontFamily="@font/font3"
-            android:gravity="left"
-            android:textSize="20dp"
-            android:textColor="#000000"/>
-
-        <CheckBox
-            android:id="@+id/chkCream"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sweet"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chkHot"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hot"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chkSlt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/salt"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chkLgt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/light"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chkhlt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/healhty"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-
-        <TextView
-            android:layout_marginTop="15dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="left"
-            android:text="2. 좋아하는 고기"
-            android:fontFamily="@font/font3"
-            android:gravity="left"
-            android:textSize="20dp"
-            android:textColor="#000000"/>
-
-        <CheckBox
-            android:id="@+id/chkchk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/chicken"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chkbeef"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/beef"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-
-        <CheckBox
-            android:id="@+id/chkpork"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/pork"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-        <CheckBox
-            android:id="@+id/chklmb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/lamb"
-            android:textStyle="bold"
-            android:fontFamily="@font/font3"/>
-
-        <Button
-            android:id="@+id/su"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="15"
-            android:inputType="text"
-            android:text="가입 완료"
-            android:layout_gravity="center"
-            android:background="@drawable/btn5"/>
-
-    </LinearLayout>
-    </ScrollView>
-
-
 </LinearLayout>
